<resources>
    <string name="app_name">Traco</string>
    <string name="network_error_message">Network Error</string>
    <string name="error">Error</string>
    <string name="phone_hint">Phone Number</string>
    <string name="log_in_text">Log In</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="password_hint">Password</string>
    <string name="sign_out">Sign Out</string>
    <string name="email">Email</string>
    <string name="email_or_phone">Email or Phone</string>
    <string name="submit">Submit</string>
    <string name="list">List</string>
    <string name="map">Map</string>
    <string name="pickup">Pick Up</string>
    <string name="dropoff">Drop Off</string>
    <string name="information">Information</string>
    <string name="deliveries">Deliveries</string>
    <string name="payment_collected">Payment Collected</string>
    <string name="locations">Locations</string>
    <string name="contact_number">Contact Number</string>
    <string name="driver_licence_number">Driver Licence No.</string>
    <string name="vehicle_reg_no">Vehicle Registration No.</string>
    <string name="confirmation">Confirmation</string>
    <string name="partial_do_confirmation">Partially selected delivery orders will not be picked up. Do you wish to continue?</string>

    <string name="delivery_order">Delivery Order</string>
    <string name="cash_sales">Cash Sales</string>
    <string name="cash">Cash</string>>
    <string name="orders">Orders</string>
    <string name="items_label">Items</string>
    <string name="confirm_pickup">Confirm Pick Up</string>
    <string name="do_header_label">Delivery Orders (%1d)</string>
    <string name="total_product_label">Total Product: %d</string>
    <string name="total_value_label">Total Value: %1s</string>
    <string name="pickup_success">Pick Up Successful</string>
    <string name="ok">OK</string>
    <string name="cash_sales_empty">No items assigned for cash sales</string>


    <!--Delivery Orders-->
    <string name="delivery_orders">Delivery Orders</string>
    <string name="deliver">Deliver</string>
    <string name="items">"Items: "</string>
    <string name="do_number">"DO No. "</string>
    <string name="date">Date</string>
    <string name="distance">Distance</string>
    <string name="preferred_time">Preferred Time:</string>
    <string name="delivery_by">Delivery By:</string>
    <string name="colon">:</string>

    <!--Order Items-->
    <plurals name="item_count_text">
        <item quantity="one">&lt;b>%d&lt;/b> Item</item>
        <item quantity="other">&lt;b>%d&lt;/b> Items</item>
    </plurals>
    <string name="weight_with_units">%s %s</string>
    <string name="value_with_currency_symbol">%s%s</string>
    <string name="skip_payment">Skip Payment</string>
    <string name="collect_payment">Collect Payment</string>
    <string name="update">Update</string>
    <string name="enter_quantity">Enter Quantity</string>
    <string name="storage_permission_denied">Please provide external storage permissions</string>
    <string name="image_picker">"Select Image From Gallery"</string>

    <!--Dropoff-->
    <string name="dropoff_stock">Drop Off</string>
    <string name="to">To:</string>
    <string name="confirm_dropoff">Confirm Drop Off</string>
    <string name="no_item_selected">Select atleast 1 item to proceed</string>

    <!--Reports-->
    <string name="reports">Reports</string>
    <string name="total_sales">Total Sales</string>
    <string name="returns">Returns</string>
    <string name="today">Today</string>
    <string name="this_week">This Week</string>
    <string name="this_month">This Month</string>
    <string name="details">Details</string>

    <string name="stock">Stock</string>
    <string name="sellable">Sellable</string>
    <string name="deliverable">Deliverable</string>
    <string name="returned">Returned</string>
    <string name="history">History</string>
    <string name="print">Print</string>
    <string name="returned_orders">Returned Orders</string>
    <string name="delivered_orders">Delivered Orders</string>
    <string name="ro_number">RO No:</string>
    <string name="returned_to_warehouse">Returned to Warehouse</string>
    <string name="picked_from_customer">Picked from Customer</string>

    <!--Collect Payment-->
    <string name="payment_hint">0.00</string>
    <string name="do_payment_title">DO > Payment</string>
    <string name="item_list">Item List</string>
    <string name="view_item_list">View Item List</string>
    <string name="current_sale">Current Sale</string>
    <string name="outstanding_balance">Outstanding Balance</string>
    <string name="previous_balance">Previous Balance</string>
    <string name="grand_total">Grand Total</string>
    <string name="done">Done</string>
    <string name="continue_text">Continue</string>
    <string name="payment_method">Payment Method</string>
    <string name="payment_method_label">Payment Method: %1s</string>
    <string name="cash_collected">Cash Collected</string>
    <string name="close">Close</string>
    <string name="received_from">Received From</string>
    <string name="signature">Signature</string>
    <string name="sign_here">Sign Here</string>

    <string name="return_orders">Return Orders</string>
    <string name="value">Value</string>
    <string name="units">Units</string>
    <string name="from_top">From:</string>
    <string name="pickup_stock">Pick Up Stock</string>
    <string name="confirm">Confirm</string>
    <string name="next">Next</string>
    <string name="total">Total</string>

    <string name="print_invoice">Print Invoice</string>
    <string name="delivery_successful">Delivery Successful</string>

    <!--Cash Sales - New Sale-->
    <string name="cash_sales_title">Cash Sales > Payment</string>
    <string name="cash_sales_returns_title">Cash Sales > Returns</string>
    <string name="existing_customer">Existing Customer</string>
    <string name="new_customer">New Customer</string>
    <string name="nearby_customers">Nearby Customers</string>
    <string name="select">Select</string>
    <string name="last_delivery">Last Delivery:</string>
    <string name="search_customer">Search Customer</string>
    <string name="search_product">Search Product</string>
    <string name="scan">Scan</string>
    <string name="search">Search</string>
    <string name="take_returns">Take Returns</string>


    <!--Error Messages-->
    <string name="invalid_quantity_error">You can only reduce the units and it should be greater than 0</string>
    <string name="invalid_name_error">Please enter valid name.</string>
    <string name="invalid_contact_number">Please enter valid contact number.</string>
    <string name="signature_error">Please add signature.</string>
    <string name="invalid_country_code">Please select proper country code</string>


    <!--Return Reasons-->
    <string name="select_reason">Select reason</string>

    <!--Returns-->
    <string name="current_return">Current Returns</string>
    <string name="returns_success">Update Successful</string>

    <string name="location_permission_denied">Location permission denied</string>
    <string name="location_fetch_error">Unable to get user location</string>
    <string name="location_field_empty">Location name could not be empty</string>
    <string name="postal_code_error">Please enter 6 digit postal code</string>
    <string name="address_error">address could not be empty</string>
    <string name="city_field_empty">City could not be empty</string>
    <string name="state_field_empty">State could not be empty</string>
    <string name="country_field_empty">Country could not be empty</string>
    <string name="business_name_field_empty">Business Name could not be empty</string>
    <string name="business_type_dropdown_error">Please select business type</string>
    <string name="designation_field_empty">Designation could not be empty</string>
    <string name="email_field_empty">Please Enter valid email id</string>

    <!--dashboard string-->
    <string name="pick_up__below_text">From Warehouse, Returns</string>
    <string name="drop_off_below_text">Delivery Orders, Cash Sales, Drop Off to Warehouse</string>
    <string name="information_below_text">Stock, History, Reports</string>

    <!--Customer strings-->
    <string name="add_customer">Add Customer</string>
    <string name="business_name">Business Name</string>
    <string name="business_type">Business Type</string>
    <string name="contact_name">Contact Name</string>
    <string name="designation">Designation</string>
    <string name="email_id">Email Id</string>
    <string name="name_your_location">Name your Location</string>
    <string name="postal_code">Postal Code</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="country">Country</string>

    <!--Map-->
    <string name="map_drag_drop">Drag &amp; drop the pin to get the address</string>

    <!--Select Product screen-->
    <string name="item_already_added">Item already added in list.</string>
    <string name="product_not_available">Product not available in inventory.</string>
    <string name="invalid_return_product">Product not available to return.</string>

    <!--Others-->
    <string name="no_delivery_orders">No orders to deliver.</string>
    <string name="no_dropoff_orders">No orders to drop off.</string>
    <string name="no_pickup_orders">No orders to pick up.</string>
    <string name="no_stocks_available">No stocks in inventory.</string>
    <string name="no_reports_available">Reports not available.</string>
    <string name="no_history_available">No orders completed</string>
    <string name="no_do_assigned">No orders assigned at this warehouse</string>

    <!--Firebase-->
    <string name="default_notification_channel_id" translatable="false">traco_default_channel</string>
    <string name="default_notification_channel_name" translatable="true">Traco</string>
    <string name="default_notification_title">Traco</string>
    <string name="default_notification_message">"New Order Assigned"</string>
</resources>
