<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="45dp"
    android:orientation="horizontal">

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_weight="12"
        android:fontFamily="@font/noto_sans"
        android:gravity="center_vertical"
        android:text="@string/items_label"
        android:textColor="@color/doTabTextColor"
        android:textSize="14sp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="6"
        android:fontFamily="@font/noto_sans"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/units"
        android:textColor="@color/doTabTextColor"
        android:textSize="14sp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="9"
        android:fontFamily="@font/noto_sans"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/value"
        android:textColor="@color/doTabTextColor"
        android:textSize="14sp" />
</LinearLayout>