<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.goleep.driverapp.leep.info.ReportsActivity">

    <include
        layout="@layout/toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/inner_dashboard_olive" />

    <RadioGroup
        android:id="@+id/rg_sort"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_today"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/radio_button_background"
            android:button="@null"
            android:checked="true"
            android:fontFamily="@font/noto_sans"
            android:gravity="center"
            android:text="@string/today"
            android:textColor="@color/doTabTextColor"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/rb_this_week"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/radio_button_background"
            android:button="@null"
            android:fontFamily="@font/noto_sans"
            android:gravity="center"
            android:text="@string/this_week"
            android:textColor="@color/doTabTextColor"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/rb_this_month"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/radio_button_background"
            android:button="@null"
            android:fontFamily="@font/noto_sans"
            android:gravity="center"
            android:text="@string/this_month"
            android:textColor="@color/doTabTextColor"
            android:textSize="14sp" />
    </RadioGroup>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/noto_sans"
                android:text="@string/total_sales"
                android:textColor="@color/text_light_grey_title"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/activity_reports_tv_total_sales"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:fontFamily="@font/noto_sans"
                android:textColor="@color/doTabTextColor"
                android:textSize="62sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/noto_sans"
                android:text="@string/cash_collected"
                android:textColor="@color/text_light_grey_title"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/activity_reports_tv_cash_collected"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="22dp"
                android:fontFamily="@font/noto_sans"
                android:textColor="@color/dark_grey_text"
                android:textSize="24sp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/noto_sans"
                android:text="@string/return_orders"
                android:textColor="@color/text_light_grey_title"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/activity_reports_tv_returns"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="22dp"
                android:fontFamily="@font/noto_sans"
                android:textColor="@color/dark_grey_text"
                android:textSize="24sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/noto_sans"
                android:text="@string/delivery_orders"
                android:textColor="@color/text_light_grey_title"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/activity_reports_tv_units"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="22dp"
                android:fontFamily="@font/noto_sans"
                android:textColor="@color/dark_grey_text"
                android:textSize="24sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/noto_sans"
                android:text="@string/locations"
                android:textColor="@color/text_light_grey_title"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/activity_reports_tv_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="22dp"
                android:fontFamily="@font/noto_sans"
                android:textColor="@color/dark_grey_text"
                android:textSize="24sp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
