<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.goleep.driverapp.leep.info.HistoryActivity">

    <include layout="@layout/toolbar_layout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/inner_dashboard_bahama_blue"/>


    <RadioGroup
        android:id="@+id/rg_orders_type"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_delivery_order"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/radio_button_background"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:text="@string/delivered_orders"
            android:textColor="@color/doTabTextColor"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/rb_returned_order"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/radio_button_background"
            android:button="@null"
            android:gravity="center"
            android:text="@string/returned_orders"
            android:textColor="@color/doTabTextColor"
            android:textSize="14sp" />

    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/tab_light_grey"/>


    <RadioGroup
        android:id="@+id/rg_sort"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_today"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/radio_button_background"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:text="@string/today"
            android:textColor="@color/doTabTextColor"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/rb_this_week"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/radio_button_background"
            android:button="@null"
            android:gravity="center"
            android:text="@string/this_week"
            android:textColor="@color/doTabTextColor"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/rb_this_month"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/radio_button_background"
            android:button="@null"
            android:gravity="center"
            android:text="@string/this_month"
            android:textColor="@color/doTabTextColor"
            android:textSize="14sp" />

    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/tab_light_grey"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/history_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@android:color/white"/>

</LinearLayout>
