<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans"
            android:text="@string/returned"
            android:textColor="@color/light_grey"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_returned"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans"
            android:textColor="@color/doTabTextColor"
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/noto_sans"
            android:text="@string/previous_balance"
            android:textColor="@color/light_grey"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_previous_balance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans"
            android:textColor="@color/doTabTextColor"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans"
            android:text="@string/current_sale"
            android:textColor="@color/light_grey"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_current_sale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans"
            android:textColor="@color/doTabTextColor"
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/noto_sans"
            android:text="@string/grand_total"
            android:textColor="@color/light_grey"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_grand_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans"
            android:textColor="@color/doTabTextColor"
            android:textSize="24sp" />

    </LinearLayout>
</LinearLayout>