<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/top_label_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/divider_view" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="@font/noto_sans_bold"
                android:gravity="center"
                android:text="@string/orders"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="@font/noto_sans_bold"
                android:gravity="center"
                android:text="@string/value"
                android:textSize="14sp" />

        </LinearLayout>

        <include layout="@layout/divider_view" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/expandable_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/confirm_button"
        android:layout_below="@id/top_label_layout" />


    <Button
        android:id="@+id/confirm_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/green"
        android:fontFamily="@font/noto_sans"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:visibility="visible" />

</RelativeLayout>